force-app/main/default/objects/Dynacat_Deployment__c/fields/iconName__c.field-meta.xml
<CustomField>
    <fullName>iconName__c</fullName>
    <defaultValue>&quot;standard:choice&quot;</defaultValue>
    <inlineHelpText>(Optional) Enter the icon name to appear in the header, eg. standard:account or utility:event. Google &apos;slds icons&apos; to see them all.</inlineHelpText>
    <label>Icon Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>