force-app/main/default/objects/Dynacat_Deployment__c/fields/iconSize__c.field-meta.xml
<CustomField>
    <fullName>iconSize__c</fullName>
    <defaultValue>&quot;small&quot;</defaultValue>
    <label>Icon Size</label>
    <length>55</length>
    <type>Text</type>
</CustomField>