force-app/main/default/objects/Dynacat_Deployment__c/fields/Show_Clear_All_Filters_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Clear_All_Filters_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Shows a larger trash-can icon to allow users to clear all the currently applied filters.</inlineHelpText>
    <label>Show Clear All Filters Button</label>
    <type>Checkbox</type>
</CustomField>